# homelab

./: .gitignore  Makefile  README.md
airflow/: docker-compose.yaml  meltano.yml  pyproject.toml  values.yaml
airflow/dags/: kubernetes_pod_executor.py  meltano.py
airflow/meltano/: meltano.yml
dagster/: DOCKERFILE  helm-values.yaml  pyproject.toml
dagster-project/: README.md  pyproject.toml
dagster-project/dagster_project/: __init__.py
dagster/meltano/: meltano.yml
dagster/meltano/extract/: tap-gitlab.yaml
dagster/meltano/load/: target-jsonl.yaml
kubernetes/helm/: dagster.yaml
meltano/: Dockerfile  meltano.yml  pyproject.toml
meltano/extract/: tap-gitlab.yml
meltano/load/: target-jsonl.yml
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  vars.tf
terraform/aws/: main.tf
